# open-pdf

./: .gitignore  SPEC.md  THIRD_PARTY_NOTICES  tickets.md
app/: README.md  pubspec.yaml
corpus/: borderless_scan.expected.json  borderless_table.expected.json  clean_scan.expected.json  generate_digital_corpus.py  generate_ruled_table_pdf.py  generate_scan_corpus.py  manifest.json  merged_cell_table.expected.json  multi_page_table.expected.json  multi_table.expected.json  noisy_scan.expected.json  rotated_scan.expected.json  rotated_table.expected.json  ruled_scan.expected.json  ruled_table.expected.json  uncertain_table.expected.json
scripts/: benchmark_digital_corpus.py  benchmark_scan_corpus.py  bundle_macho_deps.py  freeze_worker.ps1  freeze_worker.sh  package_macos.sh  package_windows.ps1  release_gate.py  sign_and_notarize_macos.sh  sign_windows.ps1  smoke_macos_package.sh  smoke_windows_package.ps1  verify_conversion.py  verify_macos_package.py  verify_windows_package.py
worker/: open_pdf_worker.spec  pyproject.toml
worker/open_pdf_worker/: __init__.py  __main__.py  converter.py  errors.py  harness.py  ocr.py  page_detection.py  protocol.py  release_gate.py  version.py
worker/open_pdf_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
worker/tests/: conftest.py  test_benchmark.py  test_conversion.py  test_digital_corpus.py  test_macos_package.py  test_ocr.py  test_page_detection.py  test_protocol.py  test_release_gate.py  test_release_safety.py  test_scan_corpus.py  test_table_cleanup.py  test_windows_package.py
(+50 files in other folders)
